# read2ch

./: CMakeLists.txt  read.c
